# life_logger

./: .gitignore  README.md  db_utils.py  generate_summaries_llm.py  pyproject.toml  run.sh  scheduler.py  summary_config.py  summary_utils_llm.py  transcript.py  transcription_viewer_gui.py  view_transcriptions.py
transcriptions/: transcriptions_2025-08-23.json
