[tool.poetry]
name = "logging-transcription"
version = "0.1.0"
description = "Real-time transcription and summarization system with LLM support"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "logging"}]

[tool.poetry.dependencies]
python = "^3.9"
openai-whisper = "*"
sounddevice = ">=0.5.0"
numpy = "*"
transformers = "^4.30.0"
torch = "^2.0.0"
tokenizers = "^0.13.0"
requests = "*"
pandas = "*"
googletrans = "4.0.0rc1"
deep-translator = "^1.11.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[tool.poetry.scripts]
transcript = "transcript:main"
generate-summaries = "generate_summaries_llm:main"
view-transcriptions = "view_transcriptions:main"
scheduler = "scheduler:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
